Update pom.xml to show compiler warnings (#54)
* Update pom.xml to show compiler warnings

* JDO-817: First version removing compiler warnings

* JDO-817: removing compiler warnings Raw use og parameterzied class

* JDO-817 removing compiler warnings: unused import

* JDO-817 removing compiler warnings: declaration can have final modifier

* JDO-817 removing compiler warnings: field may be final

* JDO-817 removing compiler warnings: call toString on an array

* JDO-817 removing compiler warnings: Duplicate branch in switch

* JDO-817 removing compiler warnings: Redundant String operation

* JDO-817 removing compiler warnings: redundant type cast

* JDO-817 removing compiler warnings: unnecessary interface modifier, unnecessary semicoln

* JDO-817 removing compiler warnings: unnecessary call to toString + unnecessary conversion to String

* JDO-817 removing compiler warnings: getCompanyModelInstances methods return correct generic list

* JDO-817: corrected namoing of instance variables

* JDO-817 removing compiler warnings: QueryElementHolder becomes generic class

* JDO-817 removing compiler warnings: @SuppressWarnings for set methods in fieldtypes classes

* JDO-817 removing compiler warnings: using pm.newQuery() with class argument

* JDO-817 removing compiler warnings: SuppressWarnings when creating a query from singleStringJDOQL

* JDO-817: removing compiler warnings add profile warnings to configure compiler-plugin

* JDO-817 removing compiler warnings: replace for/while loops with enhanced for loop

* JDO-817 removing compiler warnings: empty catch block, empty finally, throw inside finally

* JDO-817 removing compiler warnings: unchecked assignment / cast

* JDO-817 removing compiler warnings: raw use of parameterized class

* JDO-817 removing compiler warnings: static variable should be qualified by type name

* JDO-817 removing compiler warnings: remove unused imports

* JDO-817 removing compiler warnings: